@@ -12,7 +12,8 @@ BUG FIXES:
 	- Error handling for malformed IXFRs improved.
 	- Changed man pages format from mdoc to mansun, to support the Solaris OS. 
 	- Additional man pages fixes (syntax).
-
+        - Fixed start nsd while already running: do not initialize server, 
+          since it is already running.
 FEATURES:
         - Added "hide-version" configuration setting. Enabling this feature 
           stops NSD from answering to CHAOS class version requests.
