@@ -1,3 +1,7 @@
+26 November 2007: Matthijs
+	- Fixup bug start nsd while already running: do not initialize server,
+	  since it is already running. 
+
 15 November 2007: Matthijs
 	- Changed man pages format from mdoc to mansun, to support the Solaris OS. 
 	- Better logging for nsd-notify (show 'broken' zone)
